--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,25 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M1</version>
       </plugin>
+      <plugin>
+		  <groupId>org.jacoco</groupId>
+		  <artifactId>jacoco-maven-plugin</artifactId>
+		  <version>0.8.7</version>
+		  <executions>
+			<execution>
+              <goals>
+                <goal>prepare-agent</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>generate-code-coverage-report</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+            </execution>
+          </executions>
+       	</plugin>
     </plugins>
   </build>
 </project>
