--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -10,14 +10,14 @@ on:
 
 jobs:
   build:
-    name: Compile & Build
+    name: build
     runs-on: ubuntu-latest
     permissions:
       contents: read
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 16
+      name: Set up JDK 16
       uses: actions/setup-java@v2
       with:
         java-version: '16'
@@ -34,7 +34,7 @@ jobs:
     
 
   test:
-    name: Run JUnit Tests
+    name: test
     runs-on: ubuntu-latest
     needs: [ build ]
     steps:
@@ -42,13 +42,15 @@ jobs:
         run: mvn test
         
   coverage:
-    name: Run Test Coverage Reporter
     runs-on: ubuntu-latest
     needs: [ test ]
-    uses: paambaati/codeclimate-action@2.7.5
-    env: 
-      CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-      JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/java"
-    with:
-      coverageCommand: mvn test
-      coverageLocations: ${{github.workspace}}/target/site/jacoco/jacoco.xml:jacoco
+    name: coverage
+    steps:
+      - name: Publish coverge
+        uses: paambaati/codeclimate-action@2.7.5
+        env: 
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+          JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/java"
+        with:
+          coverageCommand: mvn test
+          coverageLocations: ${{github.workspace}}/target/site/jacoco/jacoco.xml:jacoco
