--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -30,16 +30,36 @@ jobs:
     
     - name: Compile with Maven
       run: mvn compile
-      
-    - name: Run Maven tests
-      run: mvn test
+  
+  test:
+    name: test
+    needs: [ test ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 16
+        uses: actions/setup-java@v2
+        with:
+          java-version: '16'
+          distribution: 'adopt'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
+      - name: Run Maven Tests
+        run: mvn test
         
   coverage:
     runs-on: ubuntu-latest
-    needs: [ build ]
+    needs: [ build, test ]
     name: coverage
     steps:
       - uses: actions/checkout@v2
+      - name: Set up JDK 16
+        uses: actions/setup-java@v2
+        with:
+          java-version: '16'
+          distribution: 'adopt'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
       - name: Publish coverge
         uses: paambaati/codeclimate-action@v2.7.5
         env: 
