--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    name: Compile & Build
+    name: build
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -30,25 +30,41 @@ jobs:
     
     - name: Compile with Maven
       run: mvn compile
-      
-    
-
+  
   test:
-    name: Run JUnit Tests
-    runs-on: ubuntu-latest
+    name: test
     needs: [ build ]
+    runs-on: ubuntu-latest
     steps:
-      - name: Run Maven tests
+      - uses: actions/checkout@v2
+      - name: Set up JDK 16
+        uses: actions/setup-java@v2
+        with:
+          java-version: '16'
+          distribution: 'adopt'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
+      - name: Run Maven Tests
         run: mvn test
         
   coverage:
-    name: Run Test Coverage Reporter
     runs-on: ubuntu-latest
-    needs: [ test ]
-    uses: paambaati/codeclimate-action@2.7.5
-    env: 
-      CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-      JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/java"
-    with:
-      coverageCommand: mvn test
-      coverageLocations: ${{github.workspace}}/target/site/jacoco/jacoco.xml:jacoco
+    needs: [ build, test ]
+    name: coverage
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 16
+        uses: actions/setup-java@v2
+        with:
+          java-version: '16'
+          distribution: 'adopt'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
+      - name: Publish coverge
+        uses: paambaati/codeclimate-action@v2.7.5
+        env: 
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+          JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/java"
+        with:
+          coverageCommand: mvn test
+          coverageLocations: ${{github.workspace}}/target/site/jacoco/jacoco.xml:jacoco
