--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,12 @@
 	    <version>1.2.0</version>
 	    <scope>test</scope>
 	</dependency>
-	
+	<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+	<dependency>
+	    <groupId>org.bouncycastle</groupId>
+	    <artifactId>bcprov-jdk15on</artifactId>
+	    <version>1.69</version>
+	</dependency>
   </dependencies>
   
   <build>
