--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -4,9 +4,16 @@ on:
   pull_request:
     branches:
       - master
+    paths:
+      - 'src/**'
+      - '.github/**'
   push:
     branches:
       - master    
+    paths:
+      - 'src/**'
+      - '.github/**'
+      
 
 jobs:
   build:
